# Trailsworn

./: CLAUDE.md  Cargo.toml
.claude/: settings.local.json
assets/: terrain_shader.wgsl
docs/: alpha-blending-tutorial.txt  art-requirements.md  combat.md  extension-guide.md  faction-rework.md  items.md  narrative.md  population.md  procedural-generation-talk.txt  rendering.md  sprite-generation.md  systems.md  vfx.md  worldgen-vision.md  worldgen.md
examples/: gen_atlas.rs  gen_blend_texture.rs  gen_terrain_array.rs  gen_world_map.rs
src/: generation.rs  lib.rs  main.rs  terrain.rs
src/pathfinding/: astar.rs  hpa.rs  los.rs  mod.rs
src/resources/: abilities.rs  ability_defs.rs  affix_defs.rs  affixes.rs  ai.rs  audio.rs  body.rs  casting.rs  combat.rs  combat_behavior.rs  damage.rs  equipment_bonuses.rs  events.rs  faction.rs  feature_defs.rs  game_state.rs  game_time.rs  identity.rs  input.rs  item_defs.rs  item_gen.rs  items.rs  magic.rs  map.rs  mod.rs  movement.rs  pack.rs  particle_defs.rs  particles.rs  selection.rs  stats.rs  status_effects.rs  task.rs  terrain_blend.rs  terrain_material.rs  theme.rs  threat.rs  vfx.rs  world.rs  zone_persistence.rs
src/systems/: ability_bar.rs  ai.rs  audio.rs  camera.rs  cast_bars.rs  casting.rs  character_sheet.rs  combat.rs  debug.rs  equipment.rs  floating_text.rs  game_time.rs  health_bars.rs  hover_info.rs  hud.rs  input.rs  inventory.rs  mod.rs  movement.rs  party_panel.rs  profiling.rs  rendering.rs  selection.rs  spawning.rs  ui_panel.rs  vfx.rs  world_map_ui.rs  zone.rs
tests/: pathfinding.rs  resources.rs  systems.rs
tools/: sprite-generator.html  tree-sprite-generator.html  tree-sprite-tuner.html
(+89 files in other folders)
