[package]
name = "trailsworn"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.1", features = ["bevy_dev_tools"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
noise = "0.9"
rand = "0.10.0"

[dev-dependencies]
image = "0.25"

# Enable max optimizations for dependencies but not for our code (fast recompiles)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
